src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background: #0A0A0A;
  color: #F5F0EB;
  font-family: 'Barlow Condensed', sans-serif;
}

/* mobile responsiveness */
@media (max-width: 768px) {

  /* navbar*/
  .nav-logo {
    display: none !important;
  }

  /* hero */
  .hero {
    height: auto !important;
    min-height: 0;
    padding: 3rem 0 !important;
  }

  .hero-left {
    width: 100% !important;
    padding: 3rem 1.5rem !important;
  }

  .hero-right {
    display: none !important;
  }

  .hero-body {
    max-width: 100% !important;
  }

  /* race table */
  .race-section {
    padding: 3rem 1rem !important;
  }

  /* charts */
  .analytics-section {
    padding: 3rem 1rem !important;
  }

  .charts-grid {
    grid-template-columns: 1fr !important;
  }

  .an-h2 {
    font-size: 2.5rem !important;
  }
}

